--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             background-color: black;
         }
     </style>
-    <link rel="stylesheet" href="/macies.lv/assets/index.css" />
+    <link rel="stylesheet" href="/assets/index.css" />
   </head>
   <body>
     <!-- This div is the entry point where your React app will be rendered -->
-    <div id="root"></div>
+    <div id="root"></div> 
 
     
   
