--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="dark" lang="lv">
+<html lang="lv">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- This div is the entry point where your React app will be rendered -->
-    <div id="root"></div> 
+    <div id="root"></div>
 
     
   
