--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             background-color: black;
         }
     </style>
-    <link rel="stylesheet" href="/assets/index.css" />
+    <link rel="stylesheet" href="/scr/index.css" />
   </head>
   <body>
     <!-- This div is the entry point where your React app will be rendered -->
