Fix vite base path and update project

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mācies.lv (React)</title>
+    <title>Mācies.lv </title>
     <style>
         body {
             background-color: black;
         }
     </style>
-    <link rel="stylesheet" href="/assets/index.css" />
+    <link rel="stylesheet" href="/src/index.css" /> <!-- correct if file is in src folder -->
   </head>
   <body>
     <!-- This div is the entry point where your React app will be rendered -->
