Your commit message

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mācies.lv </title>
     <style>
         body {
-            background-color: black;
+            background-color: rgb(2, 6, 23);
         }
     </style>
     <link rel="stylesheet" href="/assets/index.css" />
