--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mācies.lv </title>
     <style>
         body {
-            background-color: rgb(3, 9, 34);
+            background-color: rgb(2, 6, 23);
         }
     </style>
     <link rel="stylesheet" href="/assets/index.css" />
@@ -69,4 +69,6 @@
     -->
     <script type="module" src="/src/index.tsx"></script>
   </body>
+</html>
+>
 </html>
